--- a/configs/logger.yaml
+++ b/configs/logger.yaml
@@ -3,9 +3,9 @@ dbt-logger:
   version: 1.1
   formatters:
     kafka-logs:
-      format: "kafka logger - %(asctime)s - %(funcName)s - %(levelname)s - %(message)s"
+      format: "kafka logger - %(asctime)s - %(levelname)s - %(message)s"
   file:
       filename: 'logs/dbt_logger.logs'
   root:
-    level: DEBUG
+    level: INFO
     handlers: [console]
